<resources>
    <string name="app_name">Story App</string>
    <string name="icon_akun">Icon akun</string>
    <string name="welcome">Selamat Datang</string>
    <string name="login">Masuk</string>
    <string name="password">Password</string>
    <string name="password_less_than_six">Panjang password kurang dari 6</string>
    <string name="email">Email</string>
    <string name="invalid_email">Email yang kamu masukkan tidak valid</string>
    <string name="signup_message">Belum punya akun? Daftar disini</string>
    <string name="name">Nama</string>
    <string name="register">Daftar</string>
    <string name="login_message">Sudah punya akun? Login disini</string>
    <string name="warning">Peringatan</string>
    <string name="data_is_filled">Kamu sudah mengisi beberapa form di atas, apakah kamu ingin menghapusnya dan melanjutkan?</string>
    <string name="yes">Ya</string>
    <string name="invalid_email_password">Kombinasi email dan password yang kamu masukkan tidak ditemukan, silahkan periksa kembali data yang anda masukan.</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="invalid_name">Harap masukkan nama dengan benar</string>
    <string name="register_success">Pendaftaran akunmu berhasil, silahkan login untuk melanjutkan</string>
    <string name="story_cover">Sampul Cerita</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="no_data"><i>Data tidak ditemukan</i></string>
    <string name="retry">Coba Lagi</string>
    <string name="story">Cerita</string>
    <string name="add_image">Tambahkan Gambar</string>
    <string name="save">Simpan</string>
    <string name="choose_source">Pilih opsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="permission_denied">Akses permission ditolak</string>
    <string name="choose_image">Pilih Gambar</string>
    <string name="check_input">Silahkan pastikan kembali data yang anda masukkan sudah terisi semua</string>
    <string name="add_story_success">Cerita sudah ditambahkan, silahkan scroll kebawah untuk merefresh list</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="logout">Keluar</string>
    <string name="story_by">Cerita dari %s</string>
    <string name="appwidget_text" translatable="false">Story Widget</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="app_widget_text" translatable="false">Story List</string>
    <string name="show_map">Lihat Peta</string>
    <string name="story_spread">Sebaran Cerita</string>
    <string name="getting_data">Memuat Data…</string>
    <string name="showing_marker">Menampilkan Penanda....</string>
    <string name="error">Gagal menampilkan data, %s</string>
    <string name="all_markers_added">Seluruh penanda sudah ditampilkan</string>
</resources>