<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity"
    android:padding="16dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/account"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="16dp"
        android:id="@+id/imgIconAccount"
        android:contentDescription="@string/icon_akun"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome"
        style="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintVertical_bias="0"
        android:id="@+id/tvWelcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgIconAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:text="@string/login"
        style="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:id="@+id/tvTagTitle"/>

    <com.muhammhassan.storyapp.utils.component.EmailInput
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTagTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/edtEmail"
        android:layout_marginTop="8dp"
        android:transitionName="email"/>

    <com.muhammhassan.storyapp.utils.component.PasswordInput
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/edtPassword"
        android:layout_marginTop="8dp"
        android:transitionName="password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"
        android:layout_marginTop="16dp"
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:textAllCaps="false"
        android:padding="4dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btnRegister"
        android:text="@string/signup_message"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textAllCaps="false"
        android:padding="4dp"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/pbar"
        app:layout_constraintTop_toBottomOf="@id/imgIconAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:trackThickness="3dp"
        android:indeterminate="true"
        app:layout_constraintVertical_bias="0.3"
        app:indicatorColor="?attr/colorPrimary"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content"
        app:constraint_referenced_ids="btnLogin, btnRegister, edtEmail, edtPassword, tvTagTitle"/>


</androidx.constraintlayout.widget.ConstraintLayout>